[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["u-shev <sheveleva.jul@gmail.com>"]
packages = [
  { include = 'gendiff' },
]
repository = "https://github.com/u-shev/python-project-50"
classifiers=[
          'Development Status :: 5 - Production/Stable',
          'Programming Language :: Python :: 3.8',
]


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
